# mise_en_prod_data_science

./: .env  .gitignore  Dockerfile  README.md  build_features.py  main.py  pyproject.toml  requirements.txt  test.csv  titanic.py  train.csv  train.py
.github/workflows/: prod.yaml  test.yaml
data/derived/: test.csv  test.parquet  train.csv  train.parquet
notebooks/: application_8.ipynb
src/: requirements.txt
src/data/: import_data.py
src/models/: train_evaluate.py
src/pipeline/: build_features.py
